JEKT-1905: SAP lookup tables added ❇️ New     - Dataset        - DS_SAP_04_tvms        - DS_SAP_03_tvmst        - DS_SAP_02_T179        - DS_SAP_03_t179t
🔁 Modified
    - Pipeline
       - SAP_01_md_matl_dstn_chn_bba_bbl_bbn_bwi_geu_hcs_mbp_mrs_p01_tai_svs_hmd_hm2_atl_fsn

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2094,10 +2094,14 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-16 09:44:01'
-    modifiedAt: '2023-05-17 17:43:51'
+    modifiedAt: '2023-05-17 18:56:25'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MVKE
+      - datasets/DS_SAP_02_T179
+      - datasets/DS_SAP_03_t179t
+      - datasets/DS_SAP_03_tvmst
+      - datasets/DS_SAP_04_tvms
       outputs:
       - datasets/MD_MATL_DSTN_CHN
     subgraphs: []
@@ -7053,6 +7057,66 @@ datasets:
         author: jcacere7@its.jnj.com
         createdAt: '2023-05-16 10:29:07'
         modifiedAt: '2023-05-16 10:29:07'
+  datasets/DS_SAP_02_T179:
+    name: DS_SAP_02_T179
+    description: ''
+    author: jcacere7@its.jnj.com
+    createdAt: '2023-05-17 18:23:31'
+    modifiedAt: '2023-05-17 18:25:01'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcacere7@its.jnj.com
+        createdAt: '2023-05-17 18:23:31'
+        modifiedAt: '2023-05-17 18:23:31'
+  datasets/DS_SAP_03_t179t:
+    name: DS_SAP_03_t179t
+    description: ''
+    author: jcacere7@its.jnj.com
+    createdAt: '2023-05-17 18:31:59'
+    modifiedAt: '2023-05-17 18:31:59'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcacere7@its.jnj.com
+        createdAt: '2023-05-17 18:31:59'
+        modifiedAt: '2023-05-17 18:31:59'
+  datasets/DS_SAP_03_tvmst:
+    name: DS_SAP_03_tvmst
+    description: ''
+    author: jcacere7@its.jnj.com
+    createdAt: '2023-05-17 18:43:40'
+    modifiedAt: '2023-05-17 18:43:40'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcacere7@its.jnj.com
+        createdAt: '2023-05-17 18:43:40'
+        modifiedAt: '2023-05-17 18:43:40'
+  datasets/DS_SAP_04_tvms:
+    name: DS_SAP_04_tvms
+    description: ''
+    author: jcacere7@its.jnj.com
+    createdAt: '2023-05-17 18:54:13'
+    modifiedAt: '2023-05-17 18:54:13'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcacere7@its.jnj.com
+        createdAt: '2023-05-17 18:54:13'
+        modifiedAt: '2023-05-17 18:54:13'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
