JEKT-2394 - 🔁 Modified - Continue to add Release 3 Pipelines to Source Systems Jobs as more are Merged to Beta Branch.     - Job        - BBL_PIPELINE_JOB        - GEU_PIPELINE_JOB        - P01_PIPELINE_JOB        - MRS_PIPELINE_JOB        - TAI_PIPELINE_JOB        - JES_PIPELINE_JOB        - JET_PIPELINE_JOB        - DEU_PIPELINE_JOB        - JEM_PIPELINE_JOB        - MBP_PIPELINE_JOB        - BWI_PIPELINE_JOB        - HM2_PIPELINE_JOB        - FSN_PIPELINE_JOB        - HCS_PIPELINE_JOB        - ATL_PIPELINE_JOB        - SJD_PIPELINE_JOB        - BW2_PIPELINE_JOB        - JSW_PIPELINE_JOB        - BBN_PIPELINE_JOB        - SVS_PIPELINE_JOB        - DJD_PIPELINE_JOB        - GMD_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7424,6 +7424,7 @@ jobs:
     - pipelines/SAP_01_MD_PLNT
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_ATL
+    - pipelines/SAP_MD_CRNCY_SVS_BWI_ATL
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_INV_ATL
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
@@ -7438,7 +7439,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 13:44:33'
-    modifiedAt: '2023-05-17 16:56:25'
+    modifiedAt: '2023-05-17 19:28:51'
     author: smille29@its.jnj.com
   jobs/DEV_BBA_PIPELINE_JOB:
     name: BBA_PIPELINE_JOB
@@ -7509,13 +7510,14 @@ jobs:
     - pipelines/SAP_MD_DELV_LINE_BBA_BBL_BBN
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:21:30'
-    modifiedAt: '2023-05-17 17:01:24'
+    modifiedAt: '2023-05-17 19:30:05'
     author: smille29@its.jnj.com
   jobs/DEV_BBN_PIPELINE_JOB:
     name: BBN_PIPELINE_JOB
@@ -7548,13 +7550,14 @@ jobs:
     - pipelines/SAP_MD_DELV_LINE_BBA_BBL_BBN
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:22:48'
-    modifiedAt: '2023-05-17 17:02:23'
+    modifiedAt: '2023-05-17 19:31:08'
     author: smille29@its.jnj.com
   jobs/DEV_MRS_PIPELINE_JOB:
     name: MRS_PIPELINE_JOB
@@ -7572,6 +7575,7 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_mrs
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
@@ -7585,13 +7589,14 @@ jobs:
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:23:52'
-    modifiedAt: '2023-05-17 13:37:18'
+    modifiedAt: '2023-05-17 19:23:27'
     author: smille29@its.jnj.com
   jobs/DEV_HCS_PIPELINE_JOB:
     name: HCS_PIPELINE_JOB
@@ -7624,13 +7629,14 @@ jobs:
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:25:32'
-    modifiedAt: '2023-05-17 17:08:50'
+    modifiedAt: '2023-05-17 19:35:24'
     author: smille29@its.jnj.com
   jobs/DEV_MBP_PIPELINE_JOB:
     name: MBP_PIPELINE_JOB
@@ -7663,13 +7669,14 @@ jobs:
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:26:51'
-    modifiedAt: '2023-05-17 18:02:11'
+    modifiedAt: '2023-05-17 19:38:14'
     author: smille29@its.jnj.com
   jobs/DEV_P01_PIPELINE_JOB:
     name: P01_PIPELINE_JOB
@@ -7687,6 +7694,7 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
@@ -7701,13 +7709,14 @@ jobs:
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_P01
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:27:50'
-    modifiedAt: '2023-05-17 13:47:06'
+    modifiedAt: '2023-05-17 19:24:47'
     author: smille29@its.jnj.com
   jobs/DEV_SVS_PIPELINE_JOB:
     name: SVS_PIPELINE_JOB
@@ -7725,8 +7734,10 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/SAP_MD_CRNCY_SVS_BWI_ATL
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
@@ -7744,7 +7755,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:30:48'
-    modifiedAt: '2023-05-17 14:00:11'
+    modifiedAt: '2023-05-17 19:26:34'
     author: smille29@its.jnj.com
   jobs/DEV_ANS_PIPELINE_JOB:
     name: ANS_PIPELINE_JOB
@@ -7815,6 +7826,7 @@ jobs:
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_bwi
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
+    - pipelines/SAP_MD_CRNCY_SVS_BWI_ATL
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
     - pipelines/SAP_MD_DELV_LINE_BWI_TAI
@@ -7828,7 +7840,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:42:32'
-    modifiedAt: '2023-05-17 17:03:41'
+    modifiedAt: '2023-05-17 19:32:32'
     author: smille29@its.jnj.com
   jobs/DEV_FSN_PIPELINE_JOB:
     name: FSN_PIPELINE_JOB
@@ -7860,13 +7872,14 @@ jobs:
     - pipelines/SAP_01_MD_SHIP_FSN
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:44:07'
-    modifiedAt: '2023-05-17 17:06:22'
+    modifiedAt: '2023-05-17 19:33:42'
     author: smille29@its.jnj.com
   jobs/DEV_MTK_PIPELINE_JOB:
     name: MTK_PIPELINE_JOB
@@ -7892,30 +7905,6 @@ jobs:
     createdAt: '2023-03-28 15:06:37'
     modifiedAt: '2023-05-08 18:32:38'
     author: smille29@its.jnj.com
-  jobs/DEV_LNX_PIPELINE_JOB:
-    name: LNX_PIPELINE_JOB
-    description: ''
-    fabricUID: 32
-    scheduler:
-      Databricks: {}
-    cloudProvider: null
-    jobSize: Prophecy_Large
-    scheduleCron: 0 0 0 ? * 7 *
-    timeout: null
-    alerting:
-      emails: ''
-      onStart: false
-      onSuccess: false
-      onFailure: false
-    pipelines: []
-    jobClusterMode:
-      clusterMode:
-        Single: {}
-      clusterId: null
-    enabled: false
-    createdAt: '2023-03-28 17:15:06'
-    modifiedAt: '2023-05-08 18:32:53'
-    author: smille29@its.jnj.com
   jobs/DEV_TAI_PIPELINE_JOB:
     name: TAI_PIPELINE_JOB
     description: ''
@@ -7932,6 +7921,7 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_PLNT
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
@@ -7944,13 +7934,14 @@ jobs:
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:16:30'
-    modifiedAt: '2023-05-17 14:03:56'
+    modifiedAt: '2023-05-17 19:27:35'
     author: smille29@its.jnj.com
   jobs/DEV_VST_PIPELINE_JOB:
     name: VST_PIPELINE_JOB
@@ -8005,13 +7996,14 @@ jobs:
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:18:46'
-    modifiedAt: '2023-05-17 17:07:25'
+    modifiedAt: '2023-05-17 19:34:29'
     author: smille29@its.jnj.com
   jobs/DEV_BW2_PIPELINE_JOB:
     name: BW2_PIPELINE_JOB
@@ -8040,6 +8032,7 @@ jobs:
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
       clusterMode:
@@ -8047,7 +8040,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:19:52'
-    modifiedAt: '2023-05-17 16:55:20'
+    modifiedAt: '2023-05-17 19:39:20'
     author: smille29@its.jnj.com
   jobs/DEV_DEU_PIPELINE_JOB:
     name: DEU_PIPELINE_JOB
@@ -8076,6 +8069,7 @@ jobs:
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
     - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
@@ -8084,7 +8078,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:22:23'
-    modifiedAt: '2023-05-17 16:53:00'
+    modifiedAt: '2023-05-17 19:40:56'
     author: smille29@its.jnj.com
   jobs/DEV_DJD_PIPELINE_JOB:
     name: DJD_PIPELINE_JOB
@@ -8108,6 +8102,7 @@ jobs:
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
     - pipelines/JDE_MD_MATL_LOC_DJD
     - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
@@ -8117,7 +8112,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:22:54'
-    modifiedAt: '2023-05-17 16:49:52'
+    modifiedAt: '2023-05-17 19:45:52'
     author: smille29@its.jnj.com
   jobs/DEV_GMD_PIPELINE_JOB:
     name: GMD_PIPELINE_JOB
@@ -8145,6 +8140,7 @@ jobs:
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
     - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
@@ -8153,7 +8149,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:23:35'
-    modifiedAt: '2023-05-17 16:47:30'
+    modifiedAt: '2023-05-17 19:46:47'
     author: smille29@its.jnj.com
   jobs/DEV_JEM_PIPELINE_JOB:
     name: JEM_PIPELINE_JOB
@@ -8182,6 +8178,7 @@ jobs:
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
     - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
@@ -8190,7 +8187,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:25:27'
-    modifiedAt: '2023-05-17 16:46:30'
+    modifiedAt: '2023-05-17 19:47:49'
     author: smille29@its.jnj.com
   jobs/DEV_JES_PIPELINE_JOB:
     name: JES_PIPELINE_JOB
@@ -8219,6 +8216,7 @@ jobs:
     - pipelines/JDE_MD_MATL_LOC_JES
     - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
     - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
@@ -8227,7 +8225,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:26:11'
-    modifiedAt: '2023-05-17 16:44:39'
+    modifiedAt: '2023-05-17 19:48:49'
     author: smille29@its.jnj.com
   jobs/DEV_JET_PIPELINE_JOB:
     name: JET_PIPELINE_JOB
@@ -8255,6 +8253,7 @@ jobs:
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
     - pipelines/JDE_MD_MATL_LOC_JET
     - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
@@ -8264,7 +8263,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:26:51'
-    modifiedAt: '2023-05-17 16:43:40'
+    modifiedAt: '2023-05-17 19:50:38'
     author: smille29@its.jnj.com
   jobs/DEV_JNS_PIPELINE_JOB:
     name: JNS_PIPELINE_JOB
@@ -8316,6 +8315,7 @@ jobs:
     - pipelines/JDE_MD_MATL_LOC_JSW
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
     - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
@@ -8324,7 +8324,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:28:09'
-    modifiedAt: '2023-05-17 16:42:08'
+    modifiedAt: '2023-05-17 19:51:59'
     author: smille29@its.jnj.com
   jobs/DEV_MTR_PIPELINE_JOB:
     name: MTR_PIPELINE_JOB
@@ -8387,6 +8387,7 @@ jobs:
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
     - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
@@ -8395,7 +8396,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:29:19'
-    modifiedAt: '2023-05-17 16:38:55'
+    modifiedAt: '2023-05-17 19:53:02'
     author: smille29@its.jnj.com
   jobs/JOB_MD_BOM_HDR:
     name: JOB_MD_BOM_HDR
@@ -8753,13 +8754,14 @@ jobs:
     - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_LOC_HMD
+    - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: false
     createdAt: '2023-04-26 20:17:30'
-    modifiedAt: '2023-05-17 17:14:32'
+    modifiedAt: '2023-05-17 19:36:33'
     author: smille29@its.jnj.com
   jobs/JOB_MD_SLS_DOC_PTNR_FUNC_HM2:
     name: JOB_MD_SLS_DOC_PTNR_FUNC_HM2
@@ -9340,6 +9342,30 @@ jobs:
     createdAt: '2023-05-02 16:06:45'
     modifiedAt: '2023-05-11 22:34:06'
     author: jcovezd1@its.jnj.com
+  jobs/DEV_LNX_PIPELINE_JOB:
+    name: LNX_PIPELINE_JOB
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Large
+    scheduleCron: 0 0 0 ? * 7 *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines: []
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: false
+    createdAt: '2023-03-28 17:15:06'
+    modifiedAt: '2023-05-08 18:32:53'
+    author: smille29@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
