--- a/src/datasets/MD_MATL_VALUT/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_VALUT/pbt_aspects.yml
@@ -23,6 +23,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: VALUT_TYPE_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: PRC_CNTL_IND
     type: string
     nullable: true
@@ -30,14 +37,35 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: VALUT_TYPE_CD
-    type: string
-    nullable: false
+  - name: TOT_STK_QTY
+    type: decimal(18,4)
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TOT_STK_QTY
+  - name: TOT_VAL_AMT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MVG_AVG_PRC_AMT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRC_AMT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRC_UNIT_NBR
     type: decimal(18,4)
     nullable: true
     metadata:
@@ -58,28 +86,49 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: PRC_AMT
-    type: decimal(18,4)
+  - name: DEL_FL
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PRC_UNIT_NBR
-    type: decimal(18,4)
+  - name: MATL_USG
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TOT_VAL_AMT
-    type: decimal(18,4)
+  - name: MATL_ORIG
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l0_upt_
+  - name: INHS_PRODCD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CST_ELMNT_ORIG_GRP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: COST_OVHD_GRP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TMST
     type: timestamp
     nullable: true
     metadata:
@@ -107,15 +156,8 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _l1_upt_
+  - name: _l0_upt_
     type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _pk_
-    type: string
     nullable: true
     metadata:
       description: ''
@@ -124,6 +166,13 @@ schema:
   - name: _pk_md5_
     type: string
     nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _l1_upt_
+    type: timestamp
+    nullable: false
     metadata:
       description: ''
       mappings: []
