--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2105,6 +2105,24 @@ pipelines:
       - datasets/MD_MATL_LOC
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MATL_LOC_FSN_GEU_BBA_ATL:
+    name: SAP_MD_MATL_LOC_FSN_GEU_BBA_ATL
+    description: Pipeline to bba bbl bbn SAP systems for MD_MATL_LOC
+    author: ggrilo1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-17 23:04:25'
+    modifiedAt: '2023-05-18 01:04:07'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_02_MARC
+      - datasets/DS_SAP_02_T024
+      - datasets/DS_SAP_02_T024D
+      outputs:
+      - datasets/MD_MATL_LOC
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -3356,7 +3374,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-17 22:11:03'
+    modifiedAt: '2023-05-18 01:04:07'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
