JEKT-1887 🔁 Modified     - Pipeline        - SAP_MD_MATL_LOC_MBP_SVS_BBL_BBN_HCS_P01_MRS_TAI

--- a/src/pipelines/SAP_MD_MATL_LOC_MBP_SVS_BBL_BBN_HCS_P01_MRS_TAI/pbt_aspects.yml
+++ b/src/pipelines/SAP_MD_MATL_LOC_MBP_SVS_BBL_BBN_HCS_P01_MRS_TAI/pbt_aspects.yml
@@ -1,7 +1,12 @@
 version: 1
 configurations:
-- BBN
-- default
-- BBA
+- MBP
 - BBL
+- P01
+- MRS
+- default
+- HCS
+- BBN
+- SVS
+- TAI
 dependencies: []
