JEKT-1887 ❇️ New     - Pipeline        - SAP_MD_MATL_LOC_BWI
🔁 Modified
    - Dataset
       - MD_MATL_LOC

--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -310,27 +310,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MMS_FIN_CLSN_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: VMI_IND
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MSTR_PLNG_FMLY_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: VALUT_CAT
     type: string
     nullable: true
@@ -821,14 +800,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MTS_MTO_FL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_PLNR_NM
+  - name: MATL_STS_DESC
     type: string
     nullable: true
     metadata:
