--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2123,6 +2123,24 @@ pipelines:
       - datasets/MD_MATL_LOC
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MATL_LOC_BWI:
+    name: SAP_MD_MATL_LOC_BWI
+    description: Pipeline to bba bbl bbn SAP systems for MD_MATL_LOC
+    author: ggrilo1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-18 03:18:44'
+    modifiedAt: '2023-05-18 04:10:02'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_02_MARC
+      - datasets/DS_SAP_02_T024
+      - datasets/DS_SAP_02_T141T
+      outputs:
+      - datasets/MD_MATL_LOC
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -3374,7 +3392,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-18 01:04:07'
+    modifiedAt: '2023-05-18 04:09:59'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
