JEKT-1896 Finished off adding in transformations and added in direct mapping of _deleted_ 🔁 Modified     - Pipeline        - JDE_MD_MATL_JET     - Dataset        - MD_MATL

--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -394,3 +394,10 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_GRP_DESC_2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
