JEKT-1905: SAP lookup tables updated 🔁 Modified     - Pipeline        - SAP_01_md_matl_dstn_chn_bba_bbl_bbn_bwi_geu_hcs_mbp_mrs_p01_tai_svs_hmd_hm2_atl_fsn     - Dataset        - MD_MATL_DSTN_CHN

--- a/src/datasets/MD_MATL_DSTN_CHN/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_DSTN_CHN/pbt_aspects.yml
@@ -73,15 +73,15 @@ schema:
       mappings: []
       tags: []
   - name: ENTRP_DSTN_CHN_STS_CD
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MATL_BASE_CD
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -438,14 +438,14 @@ schema:
       tags: []
   - name: PRC_BND_CAT
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MATL_SLS_CAT_GRP_DESC
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -459,21 +459,21 @@ schema:
       tags: []
   - name: PROD_HIER_DESC
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DSTN_CHN_STS_CD_DESC
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: BLOK_FOR_SLS_ORDR
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
