--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2134,6 +2134,38 @@ pipelines:
       - datasets/DS_JDE_MD_SLS_ORDR_HIST_JDE
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_SLS_ORDR_HIST_JDE_JES:
+    name: JDE_MD_SLS_ORDR_HIST_JDE_JES
+    description: ''
+    author: ggrilo1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-17 17:58:39'
+    modifiedAt: '2023-05-18 06:01:07'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_F42199
+      outputs:
+      - datasets/DS_JDE_MD_SLS_ORDR_HIST_JDE
+    subgraphs: []
+    dependencies: {}
+  pipelines/JDE_MD_SLS_ORDR_HIST_JDE_JSW:
+    name: JDE_MD_SLS_ORDR_HIST_JDE_JSW
+    description: ''
+    author: ggrilo1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-18 07:52:18'
+    modifiedAt: '2023-05-18 09:53:32'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_F42199
+      outputs:
+      - datasets/DS_JDE_MD_SLS_ORDR_HIST_JDE
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -7090,7 +7122,7 @@ datasets:
     description: ''
     author: ggrilo1@its.jnj.com
     createdAt: '2023-05-17 09:01:13'
-    modifiedAt: '2023-05-17 17:37:18'
+    modifiedAt: '2023-05-18 09:53:32'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
