JEKT-1905: HM2 sap pipeline created ❇️ New     - Pipeline        - SAP_01_md_matl_dstn_chn_bwi_hmd_hm2
🔁 Modified
    - Pipeline
       - SAP_01_md_matl_dstn_chn_bba_bbl_bbn_geu_hcs_mbp_mrs_p01_tai_svs_atl_fsn

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2087,14 +2087,34 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_md_matl_dstn_chn:
-    name: SAP_01_md_matl_dstn_chn_bba_bbl_bbn_bwi_geu_hcs_mbp_mrs_p01_tai_svs_hmd_hm2_atl_fsn
+    name: SAP_01_md_matl_dstn_chn_bba_bbl_bbn_geu_hcs_mbp_mrs_p01_tai_svs_atl_fsn
     description: ''
     author: jcacere7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-16 09:44:01'
-    modifiedAt: '2023-05-18 10:13:28'
+    modifiedAt: '2023-05-18 10:20:39'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_MVKE
+      - datasets/DS_SAP_02_T179
+      - datasets/DS_SAP_03_t179t
+      - datasets/DS_SAP_03_tvmst
+      - datasets/DS_SAP_04_tvms
+      outputs:
+      - datasets/MD_MATL_DSTN_CHN
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_01_md_matl_dstn_chn_bwi_hmd_hm2:
+    name: SAP_01_md_matl_dstn_chn_bwi_hmd_hm2
+    description: ''
+    author: jcacere7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-18 10:20:02'
+    modifiedAt: '2023-05-18 10:20:02'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MVKE
