JEKT-1753 🔁 Modified Rule for UPDAT and UPTIM     - Pipeline        - SAP_MD_CO_CD_HMD     - Dataset        - MD_CO_CD

--- a/src/datasets/MD_CO_CD/pbt_aspects.yml
+++ b/src/datasets/MD_CO_CD/pbt_aspects.yml
@@ -51,6 +51,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: EXTN_ENABL_CO_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: REC_CRT_DTTM
     type: timestamp
     nullable: true
@@ -486,7 +493,7 @@ schema:
       mappings: []
       tags: []
   - name: LAST_CHG_CNFRM_DTTM
-    type: string
+    type: timestamp
     nullable: true
     metadata:
       description: ''
@@ -542,6 +549,20 @@ schema:
       mappings: []
       tags: []
   - name: MN_ECON_ACTV
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PMT_CLRNG_GRP_ID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PMT_RSN
     type: string
     nullable: true
     metadata:
