--- a/src/datasets/MD_CO_CD/pbt_aspects.yml
+++ b/src/datasets/MD_CO_CD/pbt_aspects.yml
@@ -513,6 +513,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: WTHL_TAX_CTRY_RGN_KEY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MN_ECON_ACTV
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: CUST_EXEC
     type: string
     nullable: true
